--- a/.classpath
+++ b/.classpath
@@ -41,5 +41,8 @@
 	<classpathentry kind="lib" path="lib/transaction-api-1.1.jar"/>
 	<classpathentry kind="lib" path="lib/xpp3-1.1.4c.jar"/>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="gen"/>
+	<classpathentry kind="lib" path="lib/google-api-services-drive-v2-rev134-1.18.0-rc.jar"/>
+	<classpathentry kind="lib" path="lib/google-play-services_lib.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
