--- a/.classpath
+++ b/.classpath
@@ -42,7 +42,6 @@
 	<classpathentry kind="lib" path="lib/xpp3-1.1.4c.jar"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
-	<classpathentry kind="lib" path="lib/google-api-services-drive-v2-rev134-1.18.0-rc.jar"/>
-	<classpathentry kind="lib" path="lib/google-play-services_lib.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
