--- a/.project
+++ b/.project
@@ -3,6 +3,7 @@
 	<name>StressApp</name>
 	<comment></comment>
 	<projects>
+		<project>google-play-services_lib</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
