--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -43,7 +43,7 @@
     <uses-feature android:name="android.hardware.location.GPS" android:required="false" />
     <uses-feature android:name="android.hardware.location" android:required="false" />
 	
-	<application android:icon="@drawable/icon" android:label="@string/app_name" android:debuggable="true">
+	<application android:icon="@drawable/icon" android:label="@string/app_name" android:name="myStress">
 	<meta-data android:name="com.google.android.gms.version"
            android:value="@integer/google_play_services_version" />
 	      
