--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="com.myStress"
       android:versionName="1.0" android:versionCode="1" android:sharedUserId="com.myStress">
@@ -70,7 +71,9 @@
         
         <meta-data
             android:name="android.accessibilityservice"
-            android:resource="@xml/notificationhandlerservice" />
+            android:resource="@xml/notificationhandlerservice" 
+            android:description="@string/accessibility_description"
+            />
      </service>
      <activity android:name="myStress_record_tab" android:exported="false" android:label="@string/tab_Record" android:configChanges="orientation|keyboardHidden"></activity>
      <activity android:name="com.myStress.database.myStress_sync" android:exported="false" android:label="@string/main_Sync" android:configChanges="orientation|keyboardHidden"></activity>
