Bugfixing - Audiohandler Bug - CallAudiohandler Bug

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,20 @@
 /bin/
 /bin/
 /bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
