--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -113,7 +113,7 @@
         <uses-library android:name="com.google.android.maps" />
 
         <activity
-            android:name="myStress_tabs"
+            android:name="myStress_main"
             android:configChanges="orientation|keyboardHidden"
             android:label="@string/app_name"
             android:theme="@android:style/Theme.NoTitleBar" >
@@ -156,19 +156,6 @@
                 android:description="@string/accessibility_description"
                 android:resource="@xml/notificationhandlerservice" />
         </service>
-
-        <activity
-            android:name="myStress_record_tab"
-            android:configChanges="orientation|keyboardHidden"
-            android:exported="false"
-            android:label="@string/tab_Record" >
-        </activity>
-        <activity
-            android:name="com.myStress.database.myStress_sync"
-            android:configChanges="orientation|keyboardHidden"
-            android:exported="false"
-            android:label="@string/main_Sync" >
-        </activity>
         <activity
             android:name="com.myStress.helper.SelectCameraPathPreference"
             android:configChanges="orientation|keyboardHidden"
