--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -197,6 +197,8 @@
                 <data
                     android:path="com.myStress"
                     android:scheme="package" />
+                <action android:name="android.intent.action.BATTERY_CHANGED"/>
+                <action android:name="android.intent.action.BOOT_COMPLETED"/>
             </intent-filter>
         </receiver>
         <receiver android:name="com.myStress.database.myStress_upload" >
