--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -35,8 +35,8 @@
     </uses-permission>
     <uses-permission android:name="android.permission.VIBRATE" >
     </uses-permission>
-    <uses-permission android:name="android.permission.WAKE_LOCK" >
-    </uses-permission>
+<!--   <uses-permission android:name="android.permission.WAKE_LOCK" >
+    </uses-permission> -->
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" >
     </uses-permission>
     <uses-permission android:name="android.permission.RECEIVE_SMS" >
